[gd_scene load_steps=3 format=3 uid="uid://migration_scene_uid"]

[ext_resource type="Script" path="res://database/MigrationTool.gd" id="1"]
[ext_resource type="Script" path="res://tools/MigrationUI.gd" id="2"]

[node name="MigrationTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="MigrationToolScript" type="Node" parent="."]
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MIGRATION TOOL - JSON to SQLite"
horizontal_alignment = 1

[node name="Status" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pronto para migrar"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
value = 0.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="BackupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1. Criar Backup dos JSON"

[node name="MigrateButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "2. Migrar Dados"

[node name="VerifyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "3. Verificar Migração"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LogButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Ver Log Completo"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Fechar"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 0

[node name="LogLabel" type="Label" parent="ScrollContainer"]
layout_mode = 2
text = "Log aparecerá aqui..."
autowrap_mode = 3

